<resources>
    <string name="app_name">AAIdrive</string>
    <string name="permlab_accessNotifications">IDrive Notification Access</string>
    <string name="permlab_bindNotificationListenerService">IDrive Notification Access</string>
    <string name="permdesc_accessNotifications">IDrive Notification Access</string>
    <string name="permdesc_bindNotificationListenerService">IDrive Notification Access</string>
    <string name="notification_title">AAIdrive</string>
    <string name="notification_description">Connected to Car</string>
    <string name="notification_description_chassiscode">Connected to %s</string>
    <string name="notification_description_bmw">Connected to BMW</string>
    <string name="notification_description_mini">Connected to Mini</string>
    <string name="permission_cds_normal">read generic car info</string>
    <string name="permission_cds_personal">read personal car info</string>
    <string name="notification_channel_assistant">Assistant Launcher</string>
    <string name="notification_channel_connection">Car Connection Status</string>
    <string name="notification_channel_donation">Donation Request</string>
    <string name="notification_channel_spotify">Spotify Authorization</string>
    <string name="notification_channel_test">Test Notification</string>
    <string name="navigation_listener_bmw">BMW Navigation</string>
    <string name="navigation_listener_mini">MINI Navigation</string>
    <string name="btn_search">Search</string>
    <string name="lbl_navigation_listener_searching">Searching for destination</string>
    <string name="lbl_navigation_listener_parsefailure">Could not locate destination</string>
    <string name="lbl_navigation_listener_pending">Starting navigation</string>
    <string name="lbl_navigation_listener_success">Success</string>
    <string name="lbl_navigation_listener_unsuccess">Unsuccessful</string>
    <string name="lbl_welcome_heading">Let\'s get you connected</string>
    <string name="lbl_welcome_intro">AAIdrive is an unofficial app to add your phone\'s music apps and other features to your car through the native BMW Apps protocol</string>
    <string name="lbl_welcome_compatible">Most MY2014 or newer BMWs or MINIs equipped with NBT or NBT Evo (based on IDrive 4–6) and an active ConnectedDrive or BMW Online subscription should be compatible</string>
    <string name="lbl_welcome_dependencies">The apps connection to the car depends on the BMW/MINI Connected app or the new MyBMW or Mini app to connect to your car</string>
    <string name="lbl_welcome_complete">AAIdrive also adds a variety of other features to your car, check it out!</string>
    <string name="menu_overview">Overview</string>
    <string name="menu_setup">Setup</string>
    <string name="menu_connection">Connection</string>
    <string name="menu_carinfo">Car Information</string>
    <string name="menu_music">Music</string>
    <string name="menu_notifications">Notifications</string>
    <string name="menu_assistants">Assistants</string>
    <string name="menu_maps">Maps</string>
    <string name="menu_navigation">Navigation</string>
    <string name="menu_addons">Addons</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_support">Support</string>
    <string name="menu_evplanning">EVPlanning</string>
    <string name="btn_next">Next</string>
    <string name="lbl_overviewpage">AAIdrive integrates some of your phone\'s music apps and your phone\'s notifications into your car over the custom BMW Apps protocol</string>
    <string name="lbl_connectionpage">The apps connection to the car depends on a few pieces, and here are some hints to make sure it\'s working well</string>
    <plurals name="lbl_assistantpage">
        <item quantity="one">Your phone\'s voice assistant is added as a Connected app, in case the car\'s voice input doesn\'t trigger it</item>
        <item quantity="other">Your phone\'s voice assistants are added as a Connected app, in case the car\'s voice input doesn\'t trigger it</item>
    </plurals>
    <string name="lbl_assistantpage_tip">These apps are separate from the car\'s Voice Assistant steering wheel button, which only triggers your phone\'s default assistant and is configured separately</string>
    <string name="lbl_evplanningpage">You can use EVPlanning to plan charging-stops for electric vehicles</string>
    <string name="evplannning_enable">Enable EVPlanning</string>
    <string name="lbl_notificationpage">Your incoming notifications can be viewed and interacted with from the car</string>
    <string name="spawn_test_notification">Test Notification</string>
    <string name="message_notifications">Message Notifications</string>
    <string name="notification_popups">Notification Popups</string>
    <string name="notification_popups_passenger">Popups with passenger</string>
    <string name="notification_sound">Play notification sound</string>
    <string name="notification_readout">Speak when viewing notifications</string>
    <string name="notification_readout_popup">Speak new notifications</string>
    <string name="notification_readout_popup_passenger">… with a passenger</string>
    <string name="notification_quickreplies">Quick Replies</string>
    <string name="notification_quickreplies_default">[\"👍\",\"On my way!\",\"Currently in the car\",\"Can\'t text, call me instead\",\"I\'ll call you later\"]</string>
    <string name="lbl_notification_permissions">Access to view notifications</string>
    <string name="lbl_notification_sms_permissions">Access to show SMS pictures</string>
    <string name="lbl_popupVersion">Popups only work with IDrive4</string>
    <string name="lbl_ttsUnsupported">TTS is not supported by your car</string>
    <string name="lbl_smsPermission">Grant the SMS permission to view pictures from incoming SMS images in the car. The text itself is always visible.</string>
    <string name="lbl_mapspage">A basic Google Maps screen can be displayed in the car</string>
    <string name="enable_google_maps">Enable Google Maps</string>
    <string name="lbl_widescreen_map">Widescreen Map</string>
    <string name="lbl_map_invert_zoom">Invert zoom direction</string>
    <string name="lbl_map_tilt">Tilt map</string>
    <string name="lbl_map_traffic">Show traffic</string>
    <string name="lbl_gmap_buildings">Enable 3D buildings</string>
    <string name="gmapStyleLabel">Map Style</string>
    <string name="lbl_musicpage">Your phone\'s music apps are selectable as media sources in the car</string>
    <string name="lbl_music_apps">Music Apps</string>
    <string name="musicAppIcon">App Icon</string>
    <string name="musicAppNowPlaying">Now Playing</string>
    <string name="musicAppControllable">Controllable While Running</string>
    <string name="musicAppConnectable">Fully Controllable</string>
    <string name="musicAppBrowseable">Browseable</string>
    <string name="musicAppSearchable">Searchable</string>
    <string name="musicAppUnavailable">Unavailable</string>
    <string name="musicAppHidden">Hidden</string>
    <string name="enable_audio_context">Force Audio Focus over USB connection</string>
    <string name="enable_spotify_layout">Always appear as Spotify app in IDrive5+</string>
    <string name="enable_audioplayer_layout">Prefer legacy compact music interface in IDrive5+</string>
    <string name="lbl_grant_sessions">Control over active music apps</string>
    <string name="lbl_grant_spotify_control">Ability to browse your Spotify library</string>
    <string name="lbl_grant_background_music">Allow background execution for your music apps, if the car has troubles launching them</string>
    <string name="lbl_grant">Grant</string>
    <string name="musicAppNotes_unauthorizedSpotify">Tap here to authorize Spotify access</string>
    <string name="musicAppNotes_oldSpotify">Please downgrade Spotify for full functionality (Searching)</string>
    <string name="musicAppNotes_oldSpotifyInstructions">This app can only provide full control over Spotify up to version 8.4.96.953, such as searching. For full control, please download an older version, from APKPure or similar.</string>
    <string name="musicAppNotes_spotify_apiNotFound">Please install the official Spotify client</string>
    <string name="musicAppNotes_spotify_userDeclined">Please grant permission to browse your library</string>
    <string name="musicAppNotes_spotify_apiUnavailable">Please confirm internet connectivity and disable any ad blocking</string>
    <string name="musicAppNotes_spotify_backgroundDisabled">Could not open Spotify. Please ensure Spotify is allowed to launch from the background</string>
    <string name="lbl_navigationpage_address">Paste in an address to start the car\'s navigation system from your phone</string>
    <string name="lbl_navigationpage_intent">While connected, your car\'s navigation system will show up as an option when other apps\' Navigation buttons open an app chooser</string>
    <string name="lbl_navigationstatus_active">Currently navigating to</string>
    <string name="lbl_navigationstatus_inactive">Not currently navigating</string>
    <string name="lbl_addonspage">Additional apps can work with your car to add even more functionality</string>
    <string name="lbl_addon_apps">Addon Apps</string>
    <string name="lbl_addons_empty">None found</string>
    <string name="lbl_addon_learn">Learn More</string>
    <string name="addonAppIcon">App Icon</string>
    <string name="addonConnectionPermission">Car Connection Access</string>
    <string name="addonConnectionPermissionDeclined">CAN NOT connect to the car</string>
    <string name="addonConnectionPermissionGranted">CAN connect to the car</string>
    <string name="addonNormalPermission">Car Data Access</string>
    <string name="addonNormalPermissionDeclined">CAN NOT access Car Data</string>
    <string name="addonNormalPermissionGranted">CAN access Car Data</string>
    <string name="addonPersonalPermission">Personal Car Data Access</string>
    <string name="addonPersonalPermissionDeclined">CAN NOT access Personal Car Data</string>
    <string name="addonPersonalPermissionGranted">CAN access Personal Car Data</string>
    <string name="lbl_settingspage">Advanced settings for tweaking behavior, may cause unexpected behavior</string>
    <string name="lbl_language_carinterface">Language to show in the car</string>
    <string name="lbl_language_prefercar">Prefer car language over phone language</string>
    <string name="lbl_language_prefercar_code">Prefer car language (%s) over phone language</string>
    <string name="lbl_language_forcelanguage">Force specific language</string>
    <string name="lbl_analytics_intro">AAIdrive is an unofficial hobby project, not supported or endorsed by BMW in any way, building on top of a reverse-engineered protocol. I\'m proud of its functionality and stability, but crashes may still happen. Please consider enabling analytics to automatically send any crash reports for debugging.</string>
    <string name="lbl_analytics_description">Besides crash reports, turning on analytics will also upload the list of installed music apps and some anonymous car information to help prioritize feature development.</string>
    <string name="lbl_analytics_enabled">Enable analytics and crash reporting</string>
    <string name="lbl_donations_volunteer">AAIdrive is a volunteer project</string>
    <string name="lbl_evplanning_auto_replan">Enable Automatic Replanning</string>
    <string name="lbl_evplanning_max_speed_comfort">Comfort</string>
    <string name="lbl_evplanning_max_speed_eco">Eco Pro</string>
    <string name="lbl_evplanning_max_speed_eco_plus">Eco Pro Plus</string>
    <string name="lbl_evplanning_max_speed">Maximum speed</string>
    <string name="lbl_evplanning_max_speed_drivemode_enable">Use Drive-Mode for Maximum-speed</string>
    <string name="lbl_evplanning_reference_consumption">Reference Consumption</string>
</resources>